# astir

./: .gitmodules  README.md
astir/: .gitignore  AFA.cpp  AFA.h  AFACondition.cpp  AFACondition.h  CMakeLists.txt  CharType.h  CppGenerationVisitor.cpp  CppGenerationVisitor.h  CppLLkParserGenerator.cpp  CppLLkParserGenerator.h  CppNFAGenerationHelper.cpp  CppNFAGenerationHelper.h  Exception.h  Field.cpp  FileLocation.h  FiniteAutomatonDefinition.cpp  FiniteAutomatonDefinition.h  GenerationException.cpp  GenerationException.h  GenerationHelper.cpp  GenerationVisitor.h  Grammar.astir  IFileLocalizable.h  IGenerationVisitable.h  ILLkBuildable.h  ILLkBuilding.h  ILLkFirstable.h  ILLkNonterminal.h  ILLkParserGenerable.h  ILRABuilding.h  IProductionReferencable.cpp  IProductionReferencable.h  IReferencing.cpp  IReferencing.h  ISemanticEntity.h  ISyntacticEntity.cpp  ISyntacticEntity.h  IndentedStringStream.cpp  IndentedStringStream.h  (+44 more)
astir/Resources/: Exception.h  Location.h  Machine.h  Parser.h  Production.h  ProductionStream.h  RawStream.cpp  RawStream.h  SpecimenFiniteAutomaton.scpp  SpecimenFiniteAutomaton.sh  SpecimenLLkParser.scpp  SpecimenLLkParser.sh  Terminal.h
astir/Tests/Hello Binary/: BinaryRecognizer.astir  BinaryRecognizerMain.cpp  BinaryRecognizerRefactored.astir  BinaryTokenizer.astir  BinaryTokenizerMain.cpp
astir/Tests/Test01/: Test01.astir  Test01.sln  Test01.vcxproj  Test01.vcxproj.filters  main.cpp
astir/Tests/Test02/: Test02.astir  Test02.sln  Test02.vcxproj  Test02.vcxproj.filters  main.cpp
astir/Tests/Test03/: Test03.astir  Test03.sln  Test03.vcxproj  Test03.vcxproj.filters  main.cpp
astir/Tests/Test04/: Test04.astir  Test04.sln  Test04.vcxproj  Test04.vcxproj.filters  main.cpp
astir/Tests/Test05/: Test05.sln  Test05.vcxproj  Test05.vcxproj.filters  main.cpp
astir/Tests/Test06/: Test06.sln  Test06.vcxproj  Test06.vcxproj.filters  input.txt  main.cpp
astir/Tests/Test07/: Test07.astir  Test07.sln  Test07.vcxproj  Test07.vcxproj.filters  input.txt  main.cpp
astir/Tests/Test08/: Test08.astir  Test08.sln  Test08.vcxproj  Test08.vcxproj.filters  input.txt  main.cpp
astir/Tests/Test09/: Test09.astir  Test09.sln  input.txt  (+3 more)
(+128 files in other folders)
